2009-12-02  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/config_dialog.cpp:
	- fixed button layout.

	* src/main_window.cpp:
	- fixed an illegal handler for red card action.

	* m4/ax_boost_program_options.m4:
	- updated m4 macro for boost::program_options.

	* src/config_dialog.cpp:
	* src/log_player.cpp:
	* src/log_player.h:
	* src/main_window.cpp:
	* src/monitor_client.cpp:
	* src/options.h:
	- fixed defects of monitor client object.
	- fixed defects of buffer recovering mode.

	* src/field_canvas.cpp:
	* src/field_canvas.h:
	* src/log_player.cpp:
	* src/log_player.h:
	* src/main_window.cpp:
	* src/main_window.h:
	* src/options.cpp:
	* src/options.h:
	- added an animation that shows recovering status.

2009-12-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/log_player.cpp:
	* src/log_player.h:
	* src/main_window.cpp:
	- implemented a special buffer recovering mode.

2009-11-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	* NEWS:
	- Official release 14.0.0.

	* src/log_player.cpp:
	* src/log_player.h:
	* src/main_window.cpp:
	* src/options.cpp:
	* src/options.h:
	- renamed '--cache-size' with '--buffer-size'
	- improved timer interval for buffering mode.

	* README:
	* src/disp_holder.cpp:
	* src/log_player.cpp:
	* src/log_player.h:
	* src/main_window.cpp:
	* src/src.pro:
	- fixed link target in Windows environment.
	- fixed defects in buffering mode.
	- disabled disp buffer in non-buffering mode.

2009-11-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/options.cpp:
	* src/src.pro:
	- fixed help message.
	- fixed link option for Windows.

	* NEWS:
	* README:
	- wrote short descriptions about new rcssmonitor.

	* src/log_player.cpp:
	* src/main_window.cpp:
	* src/main_window.h:
	* src/options.cpp:
	- added a help dialog for short cut keys.
	- added status bar messages.

	* src/log_player.cpp:
	* src/log_player.h:
	* rcssmonitor.pro:
	* src/Makefile.am:
	* src/disp_holder.cpp:
	* src/disp_holder.h: