@@ -1923,5 +1923,6 @@ MainWindow::showRecoveringState()
 {
     M_field_canvas->update( M_field_canvas->width() / 2,
                             M_field_canvas->height() / 2,
-                            64, 64 );
+                            Options::WAITING_ANIMATION_SIZE,
+                            Options::WAITING_ANIMATION_SIZE );
 }
