@@ -1,3 +1,11 @@
+2009-12-03  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/field_canvas.cpp:
+	* src/main_window.cpp:
+	* src/options.cpp:
+	* src/options.h:
+	- added parameter for the size of recovering animation.
+
 2009-12-02  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/config_dialog.cpp:
